layout issues work in progress

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3670,7 +3670,7 @@ body.is-touch #banner {
   background: #272833;
   padding: 2em 0;
   text-align: center;
-  position: absolute;
+  position: relative;
   bottom: 0;
   width: 100%;
 }
